Add course introduction and first lecture slides; update README and PDF structure
- Introduced a new PDF file for the course introduction.
- Created HTML slides for Lecture 1: Course Introduction and Lecture 2: Introduction to AI-Assisted Programming.
- Updated README.md to reflect the new course structure and added links to PDF downloads.
- Removed old lecture folder and updated index.html to link to new lecture files.
- Enhanced PDF generation workflow and updated the PDFs directory with new files.
- Updated the last modified timestamp in the PDFs README.

--- a/index.html
+++ b/index.html
@@ -189,8 +189,17 @@
     </div>
     
     <div class="lecture-grid">
-        <div class="lecture-card available" onclick="window.location.href='lectures/lecture-01/'">
+        <div class="lecture-card available" onclick="window.location.href='lectures/lecture1-course-introduction.html'">
             <div class="lecture-number">01</div>
+            <div class="lecture-title">Course Introduction</div>
+            <div class="lecture-description">
+                Welcome to AIAP! Course overview, learning outcomes, assessment details, and getting started with tools.
+            </div>
+            <div class="lecture-duration">45 minutes</div>
+        </div>
+        
+        <div class="lecture-card available" onclick="window.location.href='lectures/lecture2-ai-assisted-programming-intro.html'">
+            <div class="lecture-number">02</div>
             <div class="lecture-title">Introduction to AI-Assisted Programming</div>
             <div class="lecture-description">
                 Overview of AI tools in software development, GitHub Copilot, and the future of programming with AI assistance.
