--- a/lectures/lecture2-ai-assisted-programming-intro.html
+++ b/lectures/lecture2-ai-assisted-programming-intro.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Lecture 01: Introduction to AI-Assisted Programming</title>
-    <link rel="stylesheet" href="../../dist/reset.css">
-    <link rel="stylesheet" href="../../dist/reveal.css">
-    <link rel="stylesheet" href="../../dist/theme/white.css" id="theme">
-    <link rel="stylesheet" href="../../theme/aiap-custom.css">
-    <link rel="stylesheet" href="../../plugin/highlight/light-professional.css">
+    <link rel="stylesheet" href="../dist/reset.css">
+    <link rel="stylesheet" href="../dist/reveal.css">
+    <link rel="stylesheet" href="../dist/theme/white.css" id="theme">
+    <link rel="stylesheet" href="../theme/aiap-custom.css">
+    <link rel="stylesheet" href="../plugin/highlight/light-professional.css">
 </head>
 <body>
     <div class="reveal">
@@ -401,10 +401,10 @@ console.log(fibonacciMemo(50)); // Much faster for large numbers
         </div>
     </div>
 
-    <script src="../../dist/reveal.js"></script>
-    <script src="../../plugin/notes/notes.js"></script>
-    <script src="../../plugin/markdown/markdown.js"></script>
-    <script src="../../plugin/highlight/highlight.js"></script>
+    <script src="../dist/reveal.js"></script>
+    <script src="../plugin/notes/notes.js"></script>
+    <script src="../plugin/markdown/markdown.js"></script>
+    <script src="../plugin/highlight/highlight.js"></script>
     <script>
         Reveal.initialize({
             hash: true,
@@ -467,7 +467,7 @@ console.log(fibonacciMemo(50)); // Much faster for large numbers
             
             // Legacy dependencies (keeping for compatibility)
             dependencies: [
-                { src: '../../plugin/highlight/highlight.js', async: true }
+                { src: '../plugin/highlight/highlight.js', async: true }
             ]
         });
     </script>
