Update lecture title and add welcome slide content in course introduction

--- a/lectures/lecture1-course-introduction.html
+++ b/lectures/lecture1-course-introduction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Lecture 00: AIAP Course Introduction</title>
+    <title>Lecture Week 1: AIAP Course Introduction</title>
     <link rel="stylesheet" href="../dist/reset.css">
     <link rel="stylesheet" href="../dist/reveal.css">
     <link rel="stylesheet" href="../dist/theme/white.css" id="theme">
@@ -184,11 +184,26 @@
                 <div class="fade-in">
                     <h1>AI-Assisted Programming</h1>
                     <div class="section-divider"></div>
-                    <h3 class="subtitle">Course Introduction & Overview</h3>
+                    <h3 class="subtitle">Module Introduction</h3>
                     <div class="instructor-info">
                         <p>AIAP Module | Atlantic Technological University</p>
-                        <p>Welcome Back!</p>
                     </div>
+                </div>
+            </section>
+
+                   <!-- Welcome Slide -->
+            <section>
+                <h2>Welcome to the Future</h2>
+                <div class="professional-quote fragment">
+                    <p>This module is your launchpad into the next generation of software development. We'll explore how to partner with AI to build better software, faster.</p>
+                </div>
+                <div class="fragment">
+                    <h4>In this course, you will:</h4>
+                    <ul>
+                        <li>Master AI tools like GitHub Copilot.</li>
+                        <li>Boost your coding productivity and creativity.</li>
+                        <li>Learn to write and debug with AI assistance.</li>
+                    </ul>
                 </div>
             </section>
 
