--- a/lectures/lecture1-course-introduction.html
+++ b/lectures/lecture1-course-introduction.html
@@ -216,10 +216,7 @@
                 <div class="fragment">
                     <h3>Communication</h3>
                     <ul>
-                        <li>📧 Primary contact: Email</li>
-                        <li>📚 Course materials: Moodle</li>
-                        <li>💬 Quick questions: During lab sessions</li>
-                        <li>🕐 Office hours: By appointment</li>
+                        <li>📧 Email: daniel.cregg@atu.ie</li>
                     </ul>
                 </div>
             </section>
@@ -242,15 +239,15 @@
                     <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; margin: 1rem 0;">
                         <div class="assessment-card">
                             <div class="assessment-title">Group A</div>
-                            <div class="assessment-weight">group a</div>
+                            <div class="assessment-weight">groupa</div>
                         </div>
                         <div class="assessment-card">
                             <div class="assessment-title">Group B</div>
-                            <div class="assessment-weight">group b</div>
+                            <div class="assessment-weight">groupb</div>
                         </div>
                         <div class="assessment-card">
                             <div class="assessment-title">Group C</div>
-                            <div class="assessment-weight">group c</div>
+                            <div class="assessment-weight">groupc</div>
                         </div>
                     </div>
                 </div>
@@ -300,9 +297,7 @@
                 <div class="fragment">
                     <h3>Key Information:</h3>
                     <ul>
-                        <li>📋 Detailed week-by-week breakdown</li>
-                        <li>🎯 Learning objectives for each session</li>
-                        <li>📚 Required readings and resources</li>
+                        <li>📋 Detailed week-by-week syllabus breakdown</li>
                         <li>🔄 Updated regularly throughout the course</li>
                     </ul>
                 </div>
@@ -346,9 +341,8 @@
                     <div class="fragment">
                         <h3>📝 MCQ Assessments</h3>
                         <ul>
-                            <li>Multiple choice questions</li>
-                            <li>Based on lectures and labs</li>
-                            <li>Covers previous weeks' material</li>
+                            <li>Sequential Multiple choice questions</li>
+                            <li>Based on previous lectures and labs</li>
                             <li><strong>Study tip:</strong> Use Google NotebookLM to generate practice questions</li>
                         </ul>
                     </div>
@@ -480,7 +474,7 @@
                 <p>
                     <small>
                         <a href="../">← Back to Course Index</a><br>
-                        Next: Lecture 02 - Introduction to AI-Assisted Programming
+                        <a href="lecture2-ai-assisted-programming-intro.html">→ Next Lecture: Introduction to AI-Assisted Programming</a>
                     </small>
                 </p>
             </section>
