--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
     <div class="lecture-grid">
         <div class="lecture-card available" onclick="window.location.href='lectures/lecture1-course-introduction.html'">
             <div class="lecture-number">Week 1</div>
-            <div class="lecture-title">Course Introduction</div>
+            <div class="lecture-title">Module Introduction</div>
             <div class="lecture-description">
-                Welcome to AIAP! Course overview, learning outcomes, assessment details, and getting started with tools.
+                Welcome to AIAP! Module overview, learning outcomes, assessment details, and getting started with tools.
             </div>
             <div class="lecture-duration">45 minutes</div>
         </div>
@@ -278,7 +278,7 @@
     </div>
     
     <footer style="text-align: center; padding: 40px; color: var(--text-color); opacity: 0.7;">
-        <p>© 2024 AI-Assisted Programming Course | Interactive slides powered by Reveal.js</p>
+        <p>© 2025 AI-Assisted Programming Module | Interactive slides powered by Reveal.js</p>
         <p>Professional white theme with enhanced animations and responsive design</p>
     </footer>
 </body>
