Change title from 'Course' to 'Module' in HTML

--- a/lectures/lecture1-course-introduction.html
+++ b/lectures/lecture1-course-introduction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Lecture Week 1: AIAP Course Introduction</title>
+    <title>Lecture Week 1: AIAP Module Introduction</title>
     <link rel="stylesheet" href="../dist/reset.css">
     <link rel="stylesheet" href="../dist/reveal.css">
     <link rel="stylesheet" href="../dist/theme/white.css" id="theme">
