Fix title formatting in lecture2 HTML file

--- a/lectures/lecture2-ai-assisted-programming-intro.html
+++ b/lectures/lecture2-ai-assisted-programming-intro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Lecture Week 2: Introduction to AI-Assisted Programming</title>
+    <title>Lecture Week 2: Introduction to AI Assisted Programming</title>
     <link rel="stylesheet" href="../dist/reset.css">
     <link rel="stylesheet" href="../dist/reveal.css">
     <link rel="stylesheet" href="../dist/theme/white.css" id="theme">
