Update README and lecture HTML files to reflect 'module' terminology instead of 'course'

--- a/lectures/lecture1-module-introduction.html
+++ b/lectures/lecture1-module-introduction.html
@@ -198,7 +198,7 @@
                     <p>This module is your launchpad into the next generation of software development. We'll explore how to partner with AI to build better software, faster.</p>
                 </div>
                 <div class="fragment">
-                    <h4>In this course, you will:</h4>
+                    <h4>In this module, you will:</h4>
                     <ul>
                         <li>Master AI tools like GitHub Copilot.</li>
                         <li>Boost your coding productivity and creativity.</li>
@@ -211,7 +211,7 @@
             <section>
                 <h2>Contact Information</h2>
                 <div class="professional-quote">
-                    <p>For all course-related inquiries, please contact me via email.</p>
+                    <p>For all module-related inquiries, please contact me via email.</p>
                 </div>
                 <div class="fragment">
                     <h3>Communication</h3>
@@ -228,7 +228,7 @@
                     <h3>Step-by-step enrollment:</h3>
                     <ol>
                         <li>Go to <strong>https://vlegalwaymayo.atu.ie/</strong></li>
-                        <li>Search for course <strong>10720</strong></li>
+                        <li>Search for module <strong>10720</strong></li>
                         <li>Click on <strong>AI ASSISTED PROGRAMMING</strong></li>
                         <li>Find your group (A, B, or C)</li>
                         <li>Click <strong>Enrol button</strong></li>
@@ -255,7 +255,7 @@
 
             <!-- Duration and Contact Time -->
             <section>
-                <h2>Course Structure</h2>
+                <h2>Module Structure</h2>
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px;">
                     <div class="fragment">
                         <h3>⏰ Duration</h3>
@@ -290,7 +290,7 @@
 
             <!-- Syllabus -->
             <section>
-                <h2>Course Syllabus</h2>
+                <h2>Module Syllabus</h2>
                 <div class="professional-quote">
                     <p>You will find a <strong>live syllabus</strong> at the top of the module Moodle page.</p>
                 </div>
@@ -298,7 +298,7 @@
                     <h3>Key Information:</h3>
                     <ul>
                         <li>📋 Detailed week-by-week syllabus breakdown</li>
-                        <li>🔄 Updated regularly throughout the course</li>
+                        <li>🔄 Updated regularly throughout the module</li>
                     </ul>
                 </div>
             </section>
@@ -419,8 +419,8 @@
                         <li class="fragment">👤 <strong>Change your GitHub username to your actual name</strong>
                             <ul><li>Makes collaboration and grading easier</li></ul>
                         </li>
-                        <li class="fragment">📚 <strong>Enroll in the Moodle course</strong>
-                            <ul><li>Access all course materials and announcements</li></ul>
+                        <li class="fragment">📚 <strong>Enroll in the Moodle module</strong>
+                            <ul><li>Access all module materials and announcements</li></ul>
                         </li>
                         <li class="fragment">📖 <strong>Review the live syllabus</strong>
                             <ul><li>Understand the weekly progression</li></ul>
@@ -454,7 +454,7 @@
                 <div class="fragment">
                     <h3>Any questions about:</h3>
                     <ul>
-                        <li>Course structure and expectations?</li>
+                        <li>Module structure and expectations?</li>
                         <li>Assessment methods and timeline?</li>
                         <li>Tools and resources needed?</li>
                         <li>Enrollment or technical issues?</li>
@@ -462,7 +462,7 @@
                 </div>
                 <div class="fragment">
                     <div class="professional-quote">
-                        <p>Remember: This course is about learning to work <strong>with</strong> AI, not being replaced by it!</p>
+                        <p>Remember: This module is about learning to work <strong>with</strong> AI, not being replaced by it!</p>
                     </div>
                 </div>
             </section>
@@ -473,7 +473,7 @@
                 <h3>Welcome to AI-Assisted Programming</h3>
                 <p>
                     <small>
-                        <a href="../">← Back to Course Index</a><br>
+                        <a href="../">← Back to Module Index</a><br>
                         <a href="lecture2-ai-assisted-programming-intro.html">→ Next Lecture: Introduction to AI-Assisted Programming</a>
                     </small>
                 </p>
