--- a/lectures/lecture1-module-introduction.html
+++ b/lectures/lecture1-module-introduction.html
@@ -182,7 +182,7 @@
             <!-- Title Slide -->
             <section data-state="title" class="title-slide">
                 <div class="fade-in">
-                    <h1>AI-Assisted Programming</h1>
+                    <h1>AI Assisted Programming</h1>
                     <div class="section-divider"></div>
                     <h3 class="subtitle">Module Introduction</h3>
                     <div class="instructor-info">
