Fix lecture title formatting and remove outdated PDF file

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         
         <div class="lecture-card available" onclick="window.location.href='lectures/lecture2-ai-assisted-programming-intro.html'">
             <div class="lecture-number">Week 2</div>
-            <div class="lecture-title">Introduction to AI-Assisted Programming</div>
+            <div class="lecture-title">Introduction to AI Assisted Programming</div>
             <div class="lecture-description">
                 Overview of AI tools in software development, GitHub Copilot, and the future of programming with AI assistance.
             </div>
