Update lecture subtitle and instructor info for consistency

--- a/lectures/lecture2-ai-assisted-programming-intro.html
+++ b/lectures/lecture2-ai-assisted-programming-intro.html
@@ -258,9 +258,9 @@
                 <div class="fade-in">
                     <h1 class="r-fit-text">AI-Assisted Programming</h1>
                     <div class="section-divider"></div>
-                    <h3 class="subtitle">Lecture 01: Introduction to the Future of Development</h3>
+                    <h3 class="subtitle">Lecture 2: Introduction to the Future of Development</h3>
                     <div class="instructor-info">
-                        <p>AI-Assisted Programming Course | 2024</p>
+                        <p>AI-Assisted Programming Course</p>
                         <p>Duration: 60 minutes</p>
                     </div>
                 </div>
