Remove year from lecture subtitle and footer copyright for consistency

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <body>
     <div class="header">
         <h1>AI Assisted Programming</h1>
-        <p>Interactive Lecture Slides - 2024</p>
+        <p>Interactive Lecture Slides</p>
     </div>
     
     <div class="lecture-grid">
@@ -278,7 +278,7 @@
     </div>
     
     <footer style="text-align: center; padding: 40px; color: var(--text-color); opacity: 0.7;">
-        <p>© 2025 AI Assisted Programming Module | Interactive slides powered by Reveal.js</p>
+        <p>© AI Assisted Programming Module | Interactive slides powered by Reveal.js</p>
         <p>Professional white theme with enhanced animations and responsive design</p>
     </footer>
 </body>
