Fix capitalization in course title and section header for consistency

--- a/lectures/lecture2-ai-assisted-programming-intro.html
+++ b/lectures/lecture2-ai-assisted-programming-intro.html
@@ -260,7 +260,7 @@
                     <div class="section-divider"></div>
                     <h3 class="subtitle">Lecture 2: Introduction to the Future of Development</h3>
                     <div class="instructor-info">
-                        <p>AI-Assisted Programming Course</p>
+                        <p>AI Assisted Programming Course</p>
                         <p>Duration: 60 minutes</p>
                     </div>
                 </div>
@@ -281,7 +281,7 @@
 
             <!-- What is AI-Assisted Programming? -->
             <section>
-                <h2>What is AI-Assisted Programming?</h2>
+                <h2>What is  Assisted Programming?</h2>
                 <div class="fragment">
                     <p>AI-Assisted Programming is the use of artificial intelligence tools to:</p>
                     <ul>
