Add section on latest GitHub Copilot updates, features, and impact on development workflow

--- a/lectures/lecture2-ai-assisted-programming-intro.html
+++ b/lectures/lecture2-ai-assisted-programming-intro.html
@@ -256,6 +256,84 @@ graph TD
 
             </section>
 
+            <!-- Latest GitHub Copilot Updates -->
+            <section>
+                <section>
+                    <h2>Latest GitHub Copilot Updates (2025)</h2>
+                    <p>Exciting new features and improvements released in September 2025</p>
+                    <div class="fragment">
+                        <h3>🚀 Major Model Updates</h3>
+                        <ul>
+                            <li class="fragment"><strong>GPT-5 & GPT-5 mini</strong> - Generally available with enhanced code generation</li>
+                            <li class="fragment"><strong>Claude Opus 4.1</strong> - In public preview with improved reasoning</li>
+                            <li class="fragment"><strong>Gemini 2.5 Pro</strong> - Available for advanced code analysis</li>
+                            <li class="fragment"><strong>Grok Code Fast 1</strong> - Rolling out for faster completions</li>
+                        </ul>
+                    </div>
+                </section>
+
+                <section>
+                    <h3>New Features & Capabilities</h3>
+                    <div class="r-hstack">
+                        <div class="fragment">
+                            <h4>🤖 AI Model Selection</h4>
+                            <ul>
+                                <li>Auto model selection in VS Code</li>
+                                <li>GPT-4.1 for code completion</li>
+                                <li>Context-aware model switching</li>
+                                <li>Performance optimization</li>
+                            </ul>
+                        </div>
+                        <div class="fragment">
+                            <h4>🔧 Developer Tools</h4>
+                            <ul>
+                                <li>Generated commit messages</li>
+                                <li>Read-only Sparks sharing</li>
+                                <li>Controlled data access</li>
+                                <li>Enhanced chat interface</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+
+                <section>
+                    <h3>Integration & Ecosystem</h3>
+                    <div class="fragment">
+                        <p>GitHub MCP Registry enables seamless integration with external tools and services</p>
+                        <ul>
+                            <li class="fragment">Raycast integration for productivity</li>
+                            <li class="fragment">VS Code v1.104 with Copilot improvements</li>
+                            <li class="fragment">Enhanced plugin ecosystem</li>
+                            <li class="fragment">Better team collaboration features</li>
+                        </ul>
+                    </div>
+                </section>
+
+                <section>
+                    <h3>Impact on Development Workflow</h3>
+                    <div class="chart-container">
+                        <h4>Expected Improvements (2025)</h4>
+                        <div class="r-hstack">
+                            <div>
+                                <ul>
+                                    <li><strong>Code Quality:</strong> 30% improvement</li>
+                                    <li><strong>Development Speed:</strong> 40% faster</li>
+                                    <li><strong>Debugging Time:</strong> 35% reduction</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <ul>
+                                    <li><strong>Learning Curve:</strong> 50% reduction</li>
+                                    <li><strong>Code Review:</strong> 25% faster</li>
+                                    <li><strong>Documentation:</strong> 45% improvement</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <p><small>Projected based on new model capabilities and features</small></p>
+                    </div>
+                </section>
+            </section>
+
             <!-- Code Example -->
             <section>
                 <h2>Live Demo: AI Code Generation</h2>
