Update lecture 3 content: add detailed slides and scripts on prompting techniques

--- a/index.html
+++ b/index.html
@@ -360,16 +360,20 @@
                 </a>
             </div>
         </div>
-        <div class="lecture-card coming-soon" >
+        <div class="lecture-card available" onclick="window.location.href='lectures/lecture3-prompting-for-programmers.html'">
             <div class="lecture-number">Week 3</div>
-            <div class="lecture-title">Placeholder</div>
+            <div class="lecture-title">Prompting for Programmers</div>
             <div class="lecture-description">
-                Comprehensive coverage of AI-assisted programming concepts and practical applications.
+                From vague asks to reproducible results: patterns, structured outputs, and live demo debugging.
             </div>
-            <div class="lecture-duration">60 minutes - Coming Soon</div>
+            <div class="lecture-duration">60 minutes</div>
             <div class="lecture-resources">
-                <span class="resource-link pdf-resource">📄 PDF</span>
-                <span class="resource-link video-resource">🎥 Video</span>
+                <a href="https://danielcregg.github.io/AIAP-lecture-slides/pdfs/lecture3-prompting-for-programmers.pdf" class="resource-link pdf-resource" onclick="event.stopPropagation();" target="_blank">
+                    📄 PDF
+                </a>
+                <a href="https://danielcregg.github.io/AIAP-lecture-slides/videos/lecture3-prompting-for-programmers.mp4" class="resource-link video-resource" onclick="event.stopPropagation();" target="_blank">
+                    🎥 Video
+                </a>
             </div>
         </div>
         <div class="lecture-card coming-soon" >
