Refactor lecture structure and update content for Lecture 2
- Renamed lecture files and updated references from "lecture2-ai-assisted-programming-intro" to "lecture2-structure".
- Updated README, index.html, and video generation scripts to reflect new lecture title and content.
- Created new lecture slides for "Java Program Structure and Basic Concepts" with detailed agenda and learning outcomes.
- Adjusted PDF and video exports to match new lecture structure.
- Enhanced front page descriptions and durations for consistency.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Assisted Programming - Lecture Slides</title>
+    <title>Object Oriented Computing - Lecture Slides</title>
     <link rel="stylesheet" href="dist/reset.css">
     <link rel="styleshee        @media (max-width: 768px) {
             .header h1 {
@@ -323,7 +323,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>AI Assisted Programming</h1>
+        <h1>Object Oriented Computing</h1>
         <p>Interactive Lecture Slides</p>
     </div>
     
@@ -332,7 +332,7 @@
             <div class="lecture-number">Week 1</div>
             <div class="lecture-title">Module Introduction</div>
             <div class="lecture-description">
-                Welcome to AIAP! Module overview, learning outcomes, assessment details, and getting started with tools.
+                Welcome to OOC! Module overview, learning outcomes, assessment details, and getting started with tools.
             </div>
             <div class="lecture-duration">45 minutes</div>
             <div class="lecture-resources">
@@ -344,18 +344,18 @@
                 </a>
             </div>
         </div>
-        <div class="lecture-card available" onclick="window.location.href='lectures/lecture2-ai-assisted-programming-intro.html'">
+    <div class="lecture-card available" onclick="window.location.href='lectures/lecture2-structure.html'">
             <div class="lecture-number">Week 2</div>
-            <div class="lecture-title">AI Assisted Programming Intro</div>
+            <div class="lecture-title">Java Program Structure and Basics</div>
             <div class="lecture-description">
-                Overview of AI tools in software development, GitHub Copilot, and the future of programming with AI assistance.
+                Hello World, program structure, compile/run, variables and types, operators, control flow, methods, arrays, and simple objects.
             </div>
             <div class="lecture-duration">60 minutes</div>
             <div class="lecture-resources">
-                <a href="https://danielcregg.github.io/AIAP-lecture-slides/pdfs/lecture2-ai-assisted-programming-intro.pdf" class="resource-link pdf-resource" onclick="event.stopPropagation();" target="_blank">
+                <a href="https://danielcregg.github.io/AIAP-lecture-slides/pdfs/lecture2-structure.pdf" class="resource-link pdf-resource" onclick="event.stopPropagation();" target="_blank">
                     📄 PDF
                 </a>
-                <a href="https://danielcregg.github.io/AIAP-lecture-slides/videos/lecture2-ai-assisted-programming-intro.mp4" class="resource-link video-resource" onclick="event.stopPropagation();" target="_blank">
+                <a href="https://danielcregg.github.io/AIAP-lecture-slides/videos/lecture2-structure.mp4" class="resource-link video-resource" onclick="event.stopPropagation();" target="_blank">
                     🎥 Video
                 </a>
             </div>
