--- a/lectures/lecture1-module-introduction.html
+++ b/lectures/lecture1-module-introduction.html
@@ -309,7 +309,7 @@
                 <p>
                     <small>
                         <a href="../">← Back to Module Index</a><br>
-                        <a href="lecture2-ai-assisted-programming-intro.html">→ Next Lecture: Introduction to AI-Assisted Programming</a>
+                        <a href="lecture2-structure.html">→ Next Lecture: Java Program Structure and Basic Concepts</a>
                     </small>
                 </p>
             </section>
