--- a/lecture-template.html
+++ b/lecture-template.html
@@ -134,6 +134,7 @@
     <script src="../plugin/notes/notes.js"></script>
     <script src="../plugin/markdown/markdown.js"></script>
     <script src="../plugin/highlight/highlight.js"></script>
+    <script src="../plugin/math/math.js"></script>
     <script>
         // Reveal.js Configuration - Following Best Practices
         Reveal.initialize({
